5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1675_1932.log
== TEST (2019-04-29 16:10:49) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
print(min(p1-p2,p1-p3,p2-p3))

-- OUTPUT:
-0.6865079365079365
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:11:17) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
print(min(abs(p1-p2,p1-p3,p2-p3)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(min(abs(p1-p2,p1-p3,p2-p3)))
TypeError: abs() takes exactly one argument (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:12:14) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
print(min(abs(p1-p2),abs(p1-p3),abs(p2-p3)))

-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:12:31) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
print(min(abs(p1-p2),abs(p1-p3),abs(p2-p3)))

-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:12:35) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
print(min(abs(p1-p2),abs(p1-p3),abs(p2-p3)))

-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:13:46) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
s1=abs(p1-p2)
s2=abs(p1-p3)
s3=abs(p2-p3)
print(min(s1,s2,s3))

-- OUTPUT:
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:14:28) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
s1=abs(p1-p2)
s2=abs(p1-p3)
s3=abs(p2-p3)
print(s1)
print(s2)
print(s3)
print(min(s1,s2,s3))

-- OUTPUT:
0.6865079365079365
0.0028860028860029363
0.6893939393939394
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:14:32) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
s1=abs(p1-p2)
s2=abs(p1-p3)
s3=abs(p2-p3)
print(s1)
print(s2)
print(s3)
print(min(s1,s2,s3))

-- OUTPUT:
0.6865079365079365
0.0028860028860029363
0.6893939393939394
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:14:35) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
s1=abs(p1-p2)
s2=abs(p1-p3)
s3=abs(p2-p3)
print(s1)
print(s2)
print(s3)
print(min(s1,s2,s3))

-- OUTPUT:
0.6865079365079365
0.0028860028860029363
0.6893939393939394
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:15:18) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
s1=abs(p1-p2)
s2=abs(p1-p3)
s3=abs(p2-p3)
print(s1)
print(s2)
print(s3)
print(min(s1,s2,s3))

-- OUTPUT:
0.6865079365079365
0.0028860028860029363
0.6893939393939394
0.0028860028860029363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:19:33) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
s1=abs(p1-p2)
s2=abs(p1-p3)
s3=abs(p2-p3)
print(s1)
print(s2)
print(s3)
print(min(s1,s2,s3))
if (s2<s1)and(s2<s3)
	print('deu certo')

-- ERROR:
File "XXXX", line 17
    if (s2<s1)and(s2<s3)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:19:39) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
s1=abs(p1-p2)
s2=abs(p1-p3)
s3=abs(p2-p3)
print(s1)
print(s2)
print(s3)
print(min(s1,s2,s3))
if (s2<s1)and(s2<s3):
	print('deu certo')

-- OUTPUT:
0.6865079365079365
0.0028860028860029363
0.6893939393939394
0.0028860028860029363
deu certo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:22:38) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1: "))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1: "))
c= float(input("distancia entre os olhos, da Imagem 2: "))
d= float(input("distancia entre o nariz e o queixo, da Imagem 2: "))
e= float(input("distancia entre os olhos, da Imagem 3: "))
f= float(input("distancia entre o nariz e o queixo, da Imagem 3: "))
p1=(a/b)
p2=(c/d)
p3=(e/f)
s1=abs(p1-p2)
s2=abs(p1-p3)
s3=abs(p2-p3)
if (s2<s1)and(s2<s3):
	print("1 e 3")
elif (s1<s2)and(s1<s3):
	print("1 e 2")
elif (s3<s1)and(s3<s2):
	print("2 e 3")

-- EXECUTION TIME:
0.157416
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
